# Himba-Vision-Public

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/ie/tus/himbavision/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ie/tus/himbavision/: MainActivity.kt
app/src/main/java/ie/tus/himbavision/dataclasses/: DetectionResult.kt  Navigation.kt  NavigationInstructions.kt  User.kt  UserForFirebase.kt
app/src/main/java/ie/tus/himbavision/jnibridge/: FramesDirect.kt  HimbaJNIBridge.kt
app/src/main/java/ie/tus/himbavision/localsecurestorage/: SecureStorageHelper.kt  SegmentationKeyStorageHelper.kt
app/src/main/java/ie/tus/himbavision/ui/: HimbaNavScreen.kt  HomeScreen.kt  ProfileScreen.kt  RegisterScreen.kt  SignInScreen.kt  SplashScreen.kt  TestFrames.kt  WelcomeScreen.kt
app/src/main/java/ie/tus/himbavision/viewmodel/: AuthViewModel.kt  AuthViewModelFactory.kt  RetrieveProfileViewModel.kt  (+5 more)
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/header/: nanodet.h  ndkcamera.h
app/src/main/jni/source/: framesdirect.cpp  nanodet.cpp  nanodetncnn.cpp  ndkcamera.cpp
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ie/tus/himbavision/: ExampleUnitTest.kt
database/: himba-vision-export.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
images/: pan.jfif
release/: app-debug.apk
serverSideLogic/: HVDetectronAPI.py  HVTestAPI.py  himbavision.ipynb
(+27 files in other folders)
